_2007_10_10__08_20_39_ Chi-Hsiu Liang

  * removed pSys, GetSys() and m_pSys
  *-----------------------------------------
  * About MesmerEnv
  * added `MesmerEnv.h' and `MesmerEnv.cpp'
  * moved environmental variables from `System.h' to `MesmerEnv.h'
  * environmental variables are now included in a variable instance mEnv
  * mEnv is a public member of System, lives and dies with System object
  * mEnv is passed down to functions in const, instead of passing whole system
  * New instance of System can be threaded safely with all variables self-contained. e.g. vector of systems
  *-----------------------------------------
  * replace <math.h> by <cmath> (for several math function auto-conversions)
  * renamed `System' variable in main.cpp to _sys
  * reorganised file dependencies
  * updated source.ps
  * removed ReactionConnectivity.cpp/h
 
_2007_10_08__13_38_55_ Chi-Hsiu Liang

  * Removed QD/DD/double flags in files: dMatrix.h, Molecule.cpp
  * Modified platform specific definition checks: MesmerConfig.h
  * Commented out TimeString()
  * use ctime instead of time.h
  * Writes new style time stamp in xml files
  * Now checks with compilation in VC++
  * Updated source.ps

_2007_10_05__14_00_29_ Chi-Hsiu Liang

  * Removed CXSC

_2007_10_05__13_30_14_ Chi-Hsiu Liang

  * Some CXSC flags
    CXSC is considered too slow. So will be deleted afterward. This version is only a record for future reference.

_2007_10_04__11_59_35_ Chi-Hsiu Liang

  * Updated "Mesmer FAQ.doc"
  * Updated source.ps
  * modified main.cpp so that the output filename is date stamped.
  * added TimeCounter.cpp
  * Modified TimeCounter.h
    Time stamp can now be applied to occasions where proper. Please check TimeCounter.h for usage.

_2007_10_03__11_06_49_ Chi-Hsiu Liang

  * Added the CXSC library source code folder
    Sorry, forgot to add CXSC library code for everyone. Please install it in your own computer, e.g. /usr/cxsc , etc..
    Usage (in UNIX/Linux/Mac?):